--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Release MazeForge Package
+name: Publish to PyPI
 
 on:
   release:
@@ -7,7 +7,9 @@ on:
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
-    environment: pypi
+    environment:
+      name: pypi
+      url: https://pypi.org/p/mazeforge
     permissions:
       id-token: write
 
